[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-config-text-checker"
version = "2.3.0"
description = "AI-powered game configuration text review tool for typo detection, grammar checking, sensitive word filtering, and content compliance"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "AI Assistant", email = "example@example.com"}
]
maintainers = [
    {name = "AI Assistant", email = "example@example.com"}
]
keywords = [
    "game",
    "text-review",
    "config-check",
    "AI",
    "ollama",
    "qwen",
    "typo-detection",
    "grammar-check",
    "excel"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/wendellhua/game-config-text-checker"
Documentation = "https://github.com/wendellhua/game-config-text-checker#readme"
Repository = "https://github.com/wendellhua/game-config-text-checker.git"
Issues = "https://github.com/wendellhua/game-config-text-checker/issues"
Changelog = "https://github.com/wendellhua/game-config-text-checker/blob/main/CHANGELOG.md"

[project.scripts]
conf-check = "conf_check:main"

[tool.setuptools]
packages = ["scripts"]
py-modules = ["conf_check"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md"]

# ===========================
# Black Configuration
# ===========================
[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
)/
'''

# ===========================
# isort Configuration
# ===========================
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["conf_check", "scripts"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ===========================
# pytest Configuration
# ===========================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ===========================
# Coverage Configuration
# ===========================
[tool.coverage.run]
source = ["conf_check", "scripts"]
branch = true
omit = [
    "tests/*",
    "setup.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 50
show_missing = true

# ===========================
# mypy Configuration
# ===========================
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true

# ===========================
# Flake8 Configuration (in setup.cfg or .flake8)
# ===========================
# Note: Flake8 doesn't support pyproject.toml natively
# Configuration is in setup.cfg
