[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    venv,
    .venv,
    .eggs,
    *.egg-info,
    .tox,
    .mypy_cache

per-file-ignores =
    __init__.py:F401

[tool:pytest]
testpaths = tests

[metadata]
license_files = LICENSE
